src/test/ui/issues/issue-7246.stderr
error: unreachable statement
  --> $DIR/issue-7246.rs:7:5
   |
LL |     return;
   |     ------ any code following this expression is unreachable
LL |     if *ptr::null() {};
   |     ^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/issue-7246.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

